# voice

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
interactions/: setup.py
interactions/ext/voice/: __init__.py  _dummy.py  _setup.py  client.py  client.pyi  enums.py  error.py  setup.py  state.py  state.pyi  voice.py  voice.pyi  websocket.py
